--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-name: Your New Jekyll Site
+name: Jucelle Lim's Portfolio Website
 markdown: redcarpet
 pygments: true
+permalink: /:categories/:title
